2007-01-10 Added "Subplot.label_outer" method.  It will set the
           visibility of the ticklabels so that yticklabels are only
           visible in the first column and xticklabels are only
           visible in the last row - JDH

2007-01-02 Added additional kwarg documentation - JDH

2006-12-28 Improved error message for nonpositive input to log
           transform; added log kwarg to bar, barh, and hist,
           and modified bar method to behave sensibly by default
           when the ordinate has a log scale.  (This only works
           if the log scale is set before or by the call to bar,
           hence the utility of the log kwarg.) - EF

2006-12-27 backend_cairo.py: update draw_image() and _draw_mathtext() to work
           with numpy - SC

2006-12-20 Fixed xpdf dependency check, which was failing on windows.
           Removed ps2eps dependency check. - DSD

2006-12-19 Added Tim Leslie's spectral patch - JDH

2006-12-17 Added rc param 'axes.formatter.limits' to control
           the default threshold for switching to scientific
           notation. Added convenience method
           Axes.ticklabel_format() for turning scientific notation
           on or off on either or both axes. - EF

2006-12-16 Added ability to turn control scientific notation
           in ScalarFormatter - EF

2006-12-16 Enhanced boxplot to handle more flexible inputs - EF

2006-12-13 Replaced calls to where() in colors.py with much faster
           clip() and putmask() calls; removed inappropriate
           uses of getmaskorNone (which should be needed only
           very rarely); all in response to profiling by
           David Cournapeau.  Also fixed bugs in my 2-D
           array support from 12-09. - EF

2006-12-09 Replaced spy and spy2 with the new spy that combines
           marker and image capabilities - EF

2006-12-09 Added support for plotting 2-D arrays with plot:
           columns are plotted as in Matlab - EF
